--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "ext-ctype": "*"
     },
     "require-dev": {
-      "phpunit/phpunit": "^7.5.1"
+      "phpunit/phpunit": "^5.7 || ^7.5.1"
     },
     "autoload": {
       "psr-4": {
