--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "eftec/chaosmachineone",
     "description": "A Chaos Machine for PHP",
-    "version": "1.0",
+    "version": "1.1",
     "type": "library",
     "keywords": [
         "php"
@@ -21,6 +21,7 @@
         "php": ">=5.6",
         "composer/installers": "^1.6",
         "eftec/daoone": "^3.21",
+        "eftec/minilang": "^1.14",
         "ext-ctype": "*"
     },
     "require-dev": {
