--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "eftec/chaosmachineone",
     "description": "A Chaos Machine for PHP",
-    "version": "1.4",
+    "version": "1.5",
     "type": "library",
     "keywords": [
         "php"
@@ -20,9 +20,9 @@
     "require": {
         "php": ">=5.6",
         "composer/installers": "^1.6",
-        "eftec/daoone": "^3.22",
-        "eftec/minilang": "^1.15",
-        "ext-ctype": "*"
+        "eftec/minilang": "^2.0",
+        "ext-ctype": "*",
+        "eftec/pdoone": "^1.3"
     },
     "require-dev": {
       "phpunit/phpunit": "^5.7 || ^7.5.1"
