--- a/composer.json
+++ b/composer.json
@@ -17,15 +17,15 @@
   "minimum-stability": "beta",
   "license": "LGPL-3.0",
   "require": {
-    "php": ">=5.6",
-    "composer/installers": "^2.0.1",
-    "eftec/minilang": "^2.22",
+    "php": ">=7.2",
+    "composer/installers": "^2.2.0",
+    "eftec/minilang": "^2.27",
     "ext-ctype": "*",
-    "eftec/pdoone": "^2.19",
+    "eftec/pdoone": "3.12.2",
     "ext-pdo": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": ">5.7"
+    "phpunit/phpunit": "^9.0"
   },
   "autoload": {
     "psr-4": {
@@ -36,6 +36,11 @@
   "autoload-dev": {
     "psr-4": {
       "eftec\\tests\\": "tests/"
+    }
+  },
+  "config": {
+    "allow-plugins": {
+      "composer/installers": true
     }
   }
 }
